implemented MyArrayList into MyStack and MyQueue